<resources>
    <string name="app_name">emoji_chat</string>
    <string name="sender_name">Username:</string>
    <string name="receiver_name">Whom do want to chat with</string>
    <string name="start_chat_buton">Start chat</string>
    <string name="login_button">Login</string>
    <string name="send_text_button">Send</string>
    <string name="start_send_activity_button">Send activity</string>
    <string name="start_all_received_messages_button">All received messages</string>
    <string name="enter_text_message_text_view">Enter img src</string>
    <string name="create_user_button">Create new user</string>
    <string name="send_sticker_to">Send sticker to:</string>
    <string name="from">From: sampleUser</string>
    <string name="description">This image acts as an icon.</string>
    <string name="app_description">STICK IT TO \'EM\nStart sending and receiving stickers!</string>
</resources>